kubernetes/apps/prometheus/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: prometheus
      tier: monitor
  template:
    metadata:
      labels:
        app: prometheus
        tier: monitor
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:latest
        ports:
        - containerPort: 9090
          name: web
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
        volumeMounts:
        - name: prometheus-volume
          mountPath: /prometheus
        livenessProbe:
          httpGet:
            path: /-/healthy
            port: 9090
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /-/ready
            port: 9090
          initialDelaySeconds: 30
          periodSeconds: 10
      volumes:
      - name: prometheus-volume
        persistentVolumeClaim:
          claimName: pvc-prometheus
