kubernetes/apps/prometheus/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: apps
spec:
  selector:
    app: prometheus
  ports:
    - name: http
      protocol: TCP
      port: 9090
      targetPort: 9090
