kubernetes/apps/prometheus/deploy/ingressroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: apps-authentik-forward-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.preservehost: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: prometheus.mythbound.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
